--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@types/multer": "^1.4.11",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "cors": "^2.8.5",
     "express": "^4.18.3",
     "jsonwebtoken": "^9.0.2",
@@ -26,6 +28,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.0",
     "ts-node-dev": "^2.0.0",
+    "twilio": "^5.0.1",
     "typescript": "^5.4.2"
   }
 }
